--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <main class="container">
     <div class="card">
-      <h1>Tiasha…</h1>
+      <h1>Labonno…</h1>
       <h2>Will you be my Valentine? 💘</h2>
 
       <p class="subtitle">I come with unlimited hugs, late-night talks, worst jokes, and 100% real feelings 💗</p>
@@ -32,7 +32,7 @@
         <img src="https://media.giphy.com/media/3o7btPCcdNniyf0ArS/giphy.gif" alt="happy dancing bear">
       </div>
 
-      <p class="footer">Made with extra butterflies in my stomach — Maruf 💞</p>
+      <p class="footer">Made with extra butterflies in my stomach - The Real Batman Maruf 💞</p>
     </div>
   </main>
 
@@ -40,3 +40,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
