--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <main class="container">
     <div class="card">
-      <h1>Labonno…</h1>
+      <h1>Labonno</h1>
       <h2>Will you be my Valentine? 💘</h2>
 
       <p class="subtitle">I come with unlimited hugs, late-night talks, worst jokes, and 100% real feelings 💗</p>
@@ -29,7 +29,7 @@
       <div class="message" id="message" aria-live="polite"></div>
 
       <div class="gif_container" id="successGif" style="display:none;">
-        <img src="https://media.giphy.com/media/3o7btPCcdNniyf0ArS/giphy.gif" alt="happy dancing bear">
+        <img src="https://media.giphy.com/media/3o6Zt6KHxJTbXCnSvu/giphy.gif" alt="kissing cats">
       </div>
 
       <p class="footer">Made with extra butterflies in my stomach - The Real Batman Maruf 💞</p>
@@ -40,4 +40,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
